Add boolean rollups to DeltaFile for efficient indexing